--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@utils/*": ["src/utils/*"],
       "@guards": ["src/guards"],
       "@guards/*": ["src/guards/*"],
-      "@entities/*": ["src/databases/entities/*"],
+      "@entities/*": ["src/databases/*"],
       "@repositories/*": ["src/databases/repositories/*"],
       "@messages/*": ["src/modules/messages/*"]
     }
