--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^5.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
