--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "temp",
+  "name": "sos-be",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Project Why",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -12,7 +12,7 @@
     "start": "NODE_ENV=local nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
