Change readme, add query param at GET method.

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,16 @@
 NODE_ENV=template
 
+# app
+PORT={app_port}
+
+# typeorm
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST={ip_address}
 TYPEORM_HOST_READ={readonly_ip_address}
 TYPEORM_USERNAME={username}
 TYPEORM_PASSWORD={passward}
 TYPEORM_DATABASE={database_name}
-TYPEORM_PORT={port_default_3306}
+TYPEORM_PORT={db_port}
 TYPEORM_SYNCHRONIZE=false # never used, except initialize DB.
 TYPEORM_DROP_SCHEMA=false
 TYPEORM_ENTITIES=dist/src/**/entities/*.entity.js
